[gd_scene load_steps=11 format=3 uid="uid://cy3inx1v5m300"]

[ext_resource type="Script" path="res://scripts/buttons/floor_button.gd" id="1_jeenu"]
[ext_resource type="Texture2D" uid="uid://jloimrijoi8l" path="res://art/buttons/greenButton.png" id="2_hnfpl"]
[ext_resource type="Texture2D" uid="uid://df3toi5oebao4" path="res://art/buttons/redButton.png" id="3_mobwx"]
[ext_resource type="Texture2D" uid="uid://sm2hcq7b0bui" path="res://art/redRing.png" id="4_cssy7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iwqeq"]
radius = 56.0

[sub_resource type="SpriteFrames" id="SpriteFrames_m11i1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hnfpl")
}],
"loop": true,
"name": &"Green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_mobwx")
}],
"loop": true,
"name": &"Red",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_wf0t1"]
resource_name = "Pulse"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3), Vector2(5, 5), Vector2(7, 7), Vector2(9, 9), Vector2(12, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qkl72"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s6lmy"]
_data = {
"Pulse": SubResource("Animation_wf0t1"),
"RESET": SubResource("Animation_qkl72")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_jplfy"]
radius = 8.0

[node name="FloorButton" type="Node2D"]
script = ExtResource("1_jeenu")

[node name="DrainArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrainArea"]
shape = SubResource("CircleShape2D_iwqeq")

[node name="button_sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_m11i1")
animation = &"Red"

[node name="RedZone" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("4_cssy7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../RedZone")
libraries = {
"": SubResource("AnimationLibrary_s6lmy")
}

[node name="ButtonArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ButtonArea"]
shape = SubResource("CircleShape2D_jplfy")

[connection signal="body_entered" from="DrainArea" to="." method="_on_drain_area_body_entered"]
[connection signal="body_exited" from="DrainArea" to="." method="_on_drain_area_body_exited"]
[connection signal="body_entered" from="ButtonArea" to="." method="_on_button_area_body_entered"]
[connection signal="body_exited" from="ButtonArea" to="." method="_on_button_area_body_exited"]
